Fixes blocks not showing at student login

--- a/app/assets/stylesheets/components/_student_schedule.scss
+++ b/app/assets/stylesheets/components/_student_schedule.scss
@@ -242,7 +242,7 @@ Main Components
     margin-bottom: 0;
   }
   .cd-schedule .events .events-group > ul {
-    height: 950px;
+    height: 498px;
     /* reset style */
     display: block;
     overflow: visible;
